--- a/_sass/color_schemes/dracula.scss
+++ b/_sass/color_schemes/dracula.scss
@@ -1,22 +1,61 @@
-// Import the dark mode variables
-@import "./color_schemes/dark";
+// Dracula theme color palette
+$grey-dk-000: #282a36;
+$grey-dk-100: #44475a;
+$grey-dk-200: #6272a4;
+$grey-dk-250: #1e1f29;
+$grey-dk-300: #f8f8f2;
 
-// Dracula theme color variables
+$grey-lt-000: #f8f8f2;
+$grey-lt-100: #f1fa8c;
+$grey-lt-200: #bd93f9;
+$grey-lt-300: #ff79c6;
+
 $purple-000: #bd93f9;
 $purple-100: #a37ddb;
 $purple-200: #8a69c2;
 $purple-300: #6c4ba1;
 
-// Override the default dark theme variables
-$link-color: $purple-000;
-$btn-primary-color: $purple-300;
-$base-button-color: $purple-100;
+$blue-000: #8be9fd;
+$blue-100: #6fc2d1;
+$blue-200: #3c909e;
+$blue-300: #25666f;
 
-$body-background-color: #282a36;
-$sidebar-color: #1e1f29;
-$border-color: #44475a;
-$body-text-color: #f8f8f2;
-$body-heading-color: #ff79c6;
-$nav-child-link-color: $purple-000;
-$search-result-preview-color: #f1fa8c;
-$search-background-color: #44475a;
+$green-000: #50fa7b;
+$green-100: #3ad66b;
+$green-200: #26a353;
+$green-300: #1a7c3d;
+
+$yellow-000: #f1fa8c;
+$yellow-100: #d1d976;
+$yellow-200: #aebc4a;
+$yellow-300: #8a9332;
+
+$red-000: #ff5555;
+$red-100: #dd4c4c;
+$red-200: #b73232;
+$red-300: #8f2626;
+
+// Base theme colors
+$body-background-color: $grey-dk-000;
+$sidebar-color: $grey-dk-250;
+$search-background-color: $grey-dk-000;
+$table-background-color: $grey-dk-000;
+$code-background-color: $grey-dk-100;
+
+// Text colors
+$body-text-color: $grey-lt-000;
+$body-heading-color: $grey-lt-300;
+$search-result-preview-color: $grey-lt-100;
+$nav-child-link-color: $grey-lt-000;
+$link-color: $purple-000;
+$btn-primary-color: $purple-100;
+$base-button-color: $grey-dk-100;
+
+// Border colors
+$border-color: $grey-dk-100;
+$table-border-color: $grey-dk-100;
+
+// Code syntax highlighting colors
+$code-linenumber-color: $grey-dk-200;
+$code-syntax-background-color: $grey-dk-100;
+$code-syntax-color: $grey-lt-000;
